// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when building shared decimal with invalid trailing text should have extraneous input error 1`] = `
Array [
  "extraneous input 'TrailingText' expecting {'Abstract Entity', 'Association', 'End Namespace', 'Choice', 'Common', 'Descriptor', 'Domain', 'Domain Entity', 'Enumeration', 'Interchange', 'Inline Common', 'Shared Decimal', 'Shared Integer', 'Shared Short', 'Shared String', 'Subdomain'}, column: 0, line: 9, token: TrailingText",
]
`;

exports[`when building shared decimal with lowercase shared decimal name should have extraneous input error 1`] = `
Array [
  "extraneous input 'entity' expecting ID, column: 17, line: 2, token: entity",
]
`;

exports[`when building shared decimal with missing decimal places property should have have mismatched input error 1`] = `
Array [
  "mismatched input 'max value' expecting 'decimal places', column: 4, line: 6, token: max value",
  "extraneous input 'min value' expecting {'Abstract Entity', 'Association', 'End Namespace', 'Choice', 'Common', 'Descriptor', 'Domain', 'Domain Entity', 'Enumeration', 'Interchange', 'Inline Common', 'Shared Decimal', 'Shared Integer', 'Shared Short', 'Shared String', 'Subdomain'}, column: 4, line: 7, token: min value",
]
`;

exports[`when building shared decimal with missing documentation should have extraneous input error 1`] = `
Array [
  "mismatched input 'total digits' expecting 'documentation', column: 6, line: 3, token: total digits",
]
`;

exports[`when building shared decimal with missing max value should have extraneous input error 1`] = `
Array [
  "extraneous input 'min value' expecting {UNSIGNED_INT, DECIMAL_VALUE, '+', '-'}, column: 4, line: 8, token: min value",
]
`;

exports[`when building shared decimal with missing metaed id should have token recognition error 1`] = `
Array [
  "token recognition error at: '[]', column: 28, line: 2, token: ",
]
`;

exports[`when building shared decimal with missing min value should have extraneous input error 1`] = `
Array [
  "extraneous input 'min value' expecting {'Abstract Entity', 'Association', 'End Namespace', 'Choice', 'Common', 'Descriptor', 'Domain', 'Domain Entity', 'Enumeration', 'Interchange', 'Inline Common', 'Shared Decimal', 'Shared Integer', 'Shared Short', 'Shared String', 'Subdomain'}, column: 4, line: 8, token: min value",
]
`;

exports[`when building shared decimal with missing shared decimal name should have missing id error 1`] = `
Array [
  "missing ID at '[123]', column: 18, line: 2, token: [123]",
]
`;

exports[`when building shared decimal with missing total digits property should have mismatched input error 1`] = `
Array [
  "mismatched input 'decimal places' expecting 'total digits', column: 4, line: 5, token: decimal places",
  "extraneous input 'min value' expecting {'Abstract Entity', 'Association', 'End Namespace', 'Choice', 'Common', 'Descriptor', 'Domain', 'Domain Entity', 'Enumeration', 'Interchange', 'Inline Common', 'Shared Decimal', 'Shared Integer', 'Shared Short', 'Shared String', 'Subdomain'}, column: 4, line: 7, token: min value",
]
`;

exports[`when building shared decimal with missing total digits value should have mismatched input error 1`] = `
Array [
  "extraneous input 'decimal places' expecting UNSIGNED_INT, column: 4, line: 6, token: decimal places",
  "mismatched input 'max value' expecting 'decimal places', column: 4, line: 7, token: max value",
  "extraneous input 'min value' expecting {'Abstract Entity', 'Association', 'End Namespace', 'Choice', 'Common', 'Descriptor', 'Domain', 'Domain Entity', 'Enumeration', 'Interchange', 'Inline Common', 'Shared Decimal', 'Shared Integer', 'Shared Short', 'Shared String', 'Subdomain'}, column: 4, line: 8, token: min value",
]
`;
